--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,11 @@
 
     <!--Notes Screen-->
     <string name="notes_title">Notes</string>
+    <string name="notes_loading_title">Loading notes from server</string>
+    <string name="notes_empty_title">You have no notes</string>
+    <string name="notes_empty_description">You can create them</string>
+
+    <string name="add">Add</string>
+    <string name="menu">Menu</string>
 
 </resources>
