--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <!--Application-->
-    <string name="app_name">ComposeNotes</string>
+    <string name="app_name">Notes</string>
 
     <!--Top App Bar-->
     <string name="top_bar_title_selected">Selected</string>
 
     <!--Top App Bar-->
-    <string name="modal_navigation_title">Want to save something?</string>
-    <string name="modal_navigation_description">Best choice</string>
+    <string name="modal_navigation_title">Notes</string>
+    <string name="modal_navigation_description">Use markdown for best experience</string>
 
     <!--Loading-->
     <string name="loading_title">Loading…</string>
@@ -59,11 +59,29 @@
 
     <!--Notes Screen-->
     <string name="notes_title">Notes</string>
+    <string name="remote_notes_title">Remote Notes</string>
+    <string name="local_notes_title">Local Notes</string>
     <string name="notes_loading_title">Loading notes from server</string>
     <string name="notes_empty_title">You have no notes</string>
     <string name="notes_empty_description">You can create them</string>
 
+    <string name="note_title_create_date">created</string>
+    <string name="note_title_update_date">updated</string>
+
+    <string name="note_title_delete">Delete selected notes?</string>
+    <string name="note_title_delete_confirm">Delete</string>
+    <string name="note_title_delete_cancel">Cancel</string>
+    <string name="note_button_refresh">Refresh</string>
+
     <string name="add">Add</string>
     <string name="menu">Menu</string>
-
+    <string name="close">Close</string>
+    <string name="delete">Delete</string>
+    <string name="actions">Actions</string>
+    <string name="save">Save</string>
+    <string name="back">Back</string>
+    <string name="edit">Edit</string>
+    <string name="notes_error_title">Getting notes error</string>
+    <string name="note_error_title">Getting note error</string>
+    <string name="detail_note_change_color">Color</string>
 </resources>
