--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!--Loading-->
     <string name="loading_title">Loading…</string>
+    <string name="error_title">Error</string>
 
     <!--Sign In Screen-->
     <string name="auth_password_hint">Password</string>
